undo format changes

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -28,8 +28,7 @@
       <%= pluralize(@rows.size, "row") %>
 
       <% @checks.select(&:state).each do |check| %>
-        &middot;
-        <small class="check-state <%= check.state.parameterize.gsub("-", "_") %>"><%= link_to check.state.upcase, edit_check_path(check) %></small>
+        &middot; <small class="check-state <%= check.state.parameterize.gsub("-", "_") %>"><%= link_to check.state.upcase, edit_check_path(check) %></small>
         <% if check.try(:message) %>
           &middot; <%= check.message %>
         <% end %>
@@ -41,47 +40,47 @@
     <% chart_id = SecureRandom.hex %>
     <% column_types = @result.column_types %>
     <% chart_type = @result.chart_type %>
-    <% chart_options = { id: chart_id, min: nil } %>
+    <% chart_options = {id: chart_id, min: nil} %>
     <% series_library = {} %>
     <% target_index = @columns.index { |k| k.downcase == "target" } %>
     <% if target_index %>
-      <% series_library[target_index - 1] = { pointStyle: "line", hitRadius: 5, borderColor: "#109618", pointBackgroundColor: "#109618", backgroundColor: "#109618" } %>
+      <% series_library[target_index - 1] = {pointStyle: "line", hitRadius: 5, borderColor: "#109618", pointBackgroundColor: "#109618", backgroundColor: "#109618"} %>
     <% end %>
     <% if blazer_maps? && @markers.any? %>
       <div id="map" style="height: <%= @only_chart ? 300 : 500 %>px;"></div>
       <script>
-          L.mapbox.accessToken = '<%= ENV["MAPBOX_ACCESS_TOKEN"] %>';
-          var map = L.mapbox.map('map', 'ankane.ioo8nki0');
-          <%= blazer_js_var "markers", @markers %>
-          var featureLayer = L.mapbox.featureLayer().addTo(map);
-          var geojson = [];
-          for (var i = 0; i < markers.length; i++) {
-              var marker = markers[i];
-              geojson.push({
-                  type: 'Feature',
-                  geometry: {
-                      type: 'Point',
-                      coordinates: [
-                          marker.longitude,
-                          marker.latitude
-                      ]
-                  },
-                  properties: {
-                      description: marker.title,
-                      'marker-color': '#f86767',
-                      'marker-size': 'medium'
-                  }
-              });
-          }
-          featureLayer.setGeoJSON(geojson);
-          map.fitBounds(featureLayer.getBounds());
+        L.mapbox.accessToken = '<%= ENV["MAPBOX_ACCESS_TOKEN"] %>';
+        var map = L.mapbox.map('map', 'ankane.ioo8nki0');
+        <%= blazer_js_var "markers", @markers %>
+        var featureLayer = L.mapbox.featureLayer().addTo(map);
+        var geojson = [];
+        for (var i = 0; i < markers.length; i++) {
+          var marker = markers[i];
+          geojson.push({
+            type: 'Feature',
+            geometry: {
+              type: 'Point',
+              coordinates: [
+                marker.longitude,
+                marker.latitude
+              ]
+            },
+            properties: {
+              description: marker.title,
+              'marker-color': '#f86767',
+              'marker-size': 'medium'
+            }
+          });
+        }
+        featureLayer.setGeoJSON(geojson);
+        map.fitBounds(featureLayer.getBounds());
       </script>
     <% elsif chart_type == "line" %>
-      <%= line_chart @columns[1..-1].each_with_index.map { |k, i| { name: blazer_series_name(k), data: @rows.map { |r| [r[0], r[i + 1]] }, library: series_library[i] } }, chart_options %>
+      <%= line_chart @columns[1..-1].each_with_index.map{ |k, i| {name: blazer_series_name(k), data: @rows.map{ |r| [r[0], r[i + 1]] }, library: series_library[i]} }, chart_options %>
     <% elsif chart_type == "line2" %>
-      <%= line_chart @rows.group_by { |r| v = r[1]; (@boom[@columns[1]] || {})[v.to_s] || v }.each_with_index.map { |(name, v), i| { name: blazer_series_name(name), data: v.map { |v2| [v2[0], v2[2]] }, library: series_library[i] } }, chart_options %>
+      <%= line_chart @rows.group_by { |r| v = r[1]; (@boom[@columns[1]] || {})[v.to_s] || v }.each_with_index.map { |(name, v), i| {name: blazer_series_name(name), data: v.map { |v2| [v2[0], v2[2]] }, library: series_library[i]} }, chart_options %>
     <% elsif chart_type == "bar" %>
-      <%= column_chart (values.size - 1).times.map { |i| name = @columns[i + 1]; { name: blazer_series_name(name), data: @rows.first(20).map { |r| [(@boom[@columns[0]] || {})[r[0].to_s] || r[0], r[i + 1]] } } }, id: chart_id %>
+      <%= column_chart (values.size - 1).times.map { |i| name = @columns[i + 1]; {name: blazer_series_name(name), data: @rows.first(20).map { |r| [(@boom[@columns[0]] || {})[r[0].to_s] || r[0], r[i + 1]] } } }, id: chart_id %>
     <% elsif chart_type == "bar2" %>
       <% first_20 = @rows.group_by { |r| r[0] }.values.first(20).flatten(1) %>
       <% labels = first_20.map { |r| r[0] }.uniq %>
@@ -91,7 +90,7 @@
           <% first_20 << [l, s, 0] unless first_20.find { |r| r[0] == l && r[1] == s } %>
         <% end %>
       <% end %>
-      <%= column_chart first_20.group_by { |r| v = r[1]; (@boom[@columns[1]] || {})[v.to_s] || v }.each_with_index.map { |(name, v), i| { name: blazer_series_name(name), data: v.sort_by { |r2| labels.index(r2[0]) }.map { |v2| v3 = v2[0]; [(@boom[@columns[0]] || {})[v3.to_s] || v3, v2[2]] } } }, id: chart_id %>
+      <%= column_chart first_20.group_by { |r| v = r[1]; (@boom[@columns[1]] || {})[v.to_s] || v }.each_with_index.map { |(name, v), i| {name: blazer_series_name(name), data: v.sort_by { |r2| labels.index(r2[0]) }.map { |v2| v3 = v2[0]; [(@boom[@columns[0]] || {})[v3.to_s] || v3, v2[2]] }} }, id: chart_id %>
     <% elsif chart_type == "scatter" %>
       <%= scatter_chart @rows, xtitle: @columns[0], ytitle: @columns[1], id: chart_id %>
     <% elsif chart_type == "timeline" || "timeline2" %>
@@ -119,44 +118,44 @@
         <% else %>
           <table class="table results-table" style="margin-bottom: 0;">
             <thead>
-            <tr>
-              <% @columns.each_with_index do |key, i| %>
-                <% type = @column_types[i] %>
-                <th style="width: <%= header_width %>%;" data-sort="<%= type %>">
-                  <div style="min-width: <%= @min_width_types.include?(i) ? 180 : 60 %>px;">
-                    <%= key %>
-                  </div>
-                </th>
-              <% end %>
-            </tr>
-            </thead>
-            <tbody>
-            <% @rows.each do |row| %>
               <tr>
-                <% row.each_with_index do |v, i| %>
-                  <% k = @columns[i] %>
-                  <td>
-                    <% if v.is_a?(Time) %>
-                      <% v = blazer_time_value(@data_source, k, v) %>
-                    <% end %>
-
-                    <% unless v.nil? %>
-                      <% if v.is_a?(String) && v == "" %>
-                        <div class="text-muted">empty string</div>
-                      <% elsif @linked_columns[k] %>
-                        <%= link_to blazer_format_value(k, v), @linked_columns[k].gsub("{value}", u(v.to_s)), target: "_blank" %>
-                      <% else %>
-                        <%= blazer_format_value(k, v) %>
-                      <% end %>
-                    <% end %>
-
-                    <% if v2 = (@boom[k] || {})[v.nil? ? v : v.to_s] %>
-                      <div class="text-muted"><%= v2 %></div>
-                    <% end %>
-                  </td>
+                <% @columns.each_with_index do |key, i| %>
+                  <% type = @column_types[i] %>
+                  <th style="width: <%= header_width %>%;" data-sort="<%= type %>">
+                    <div style="min-width: <%= @min_width_types.include?(i) ? 180 : 60 %>px;">
+                      <%= key %>
+                    </div>
+                  </th>
                 <% end %>
               </tr>
-            <% end %>
+            </thead>
+            <tbody>
+              <% @rows.each do |row| %>
+                <tr>
+                  <% row.each_with_index do |v, i| %>
+                    <% k = @columns[i] %>
+                    <td>
+                      <% if v.is_a?(Time) %>
+                        <% v = blazer_time_value(@data_source, k, v) %>
+                      <% end %>
+
+                      <% unless v.nil? %>
+                        <% if v.is_a?(String) && v == "" %>
+                          <div class="text-muted">empty string</div>
+                        <% elsif @linked_columns[k] %>
+                          <%= link_to blazer_format_value(k, v), @linked_columns[k].gsub("{value}", u(v.to_s)), target: "_blank" %>
+                        <% else %>
+                          <%= blazer_format_value(k, v) %>
+                        <% end %>
+                      <% end %>
+
+                      <% if v2 = (@boom[k] || {})[v.nil? ? v : v.to_s] %>
+                        <div class="text-muted"><%= v2 %></div>
+                      <% end %>
+                    </td>
+                  <% end %>
+                </tr>
+              <% end %>
             </tbody>
           </table>
         <% end %>
