--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -69,6 +69,10 @@ input.search:focus {
   height: 160px;
 }
 
+.ace-twilight .ace_gutter {
+  background: transparent;
+}
+
 .ace_print-margin-layer {
   display: none;
 }
