Fixed invalid date

--- a/app/views/blazer/_variables.html.erb
+++ b/app/views/blazer/_variables.html.erb
@@ -42,7 +42,7 @@
               singleDatePicker: true,
               locale: {format: format},
               autoUpdateInput: false,
-              startDate: input.val().length > 0 ? moment.tz(input.val(), timeZone) : null
+              startDate: input.val().length > 0 ? moment.tz(input.val(), timeZone) : now
             })
             // hack to start with empty date
             datePicker.on("apply.daterangepicker", function(ev, picker) {
