--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -16,7 +16,7 @@
           <div class="pull-left" style="margin-top: 9px;">
             <%= link_to "Back", :back %>
           </div>
-          <a :href="dataSourcePath" target="_blank" style="margin-right: 10px;">Schema</a>
+          <a :href="dataSourcePath" target="_blank" style="margin-right: 10px;">Docs</a>
           <%= f.select :data_source, Blazer.data_sources.values.select { |ds| q = @query.dup; q.data_source = ds.id; q.editable?(blazer_user) }.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size <= 1), style: "width: 140px;" %>
           <div id="tables" style="display: inline-block; width: 250px; margin-right: 10px;">
             <select id="table_names" style="width: 240px;" placeholder="Preview table"></select>
