--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -12,7 +12,6 @@ pre {
 }
 
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -141,14 +140,8 @@ input.search:focus {
   color: #000;
 }
 
-.topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: whitesmoke;
-  height: 60px;
-  z-index: 1001;
+.navbar-default {
+  border: none;
 }
 
 .glyphicon-remove {
