--- a/app/views/blazer/_variables.html.erb
+++ b/app/views/blazer/_variables.html.erb
@@ -8,6 +8,7 @@
       return moment.tz(time.format(format), timeZone)
     }
   </script>
+  <hr style="margin-top: 0;" />
   <form id="bind" method="get" action="<%= action %>" class="form-inline" style="margin-bottom: 10px;">
     <% date_vars = ["start_time", "end_time"] %>
     <% if (date_vars - @bind_vars).empty? %>
