--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -17,6 +17,22 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Blazer", root_path, class: "navbar-brand" %></li>
+          <li><%= link_to "Queries", root_path %></li>
+          <li><%= link_to "Dashboards", dashboards_path %></li>
+          <li><%= link_to "Checks", checks_path %></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="navbar-text" style="font-weight: bold; padding-left: 15px;">Create</li>
+          <li><%= link_to "Query", new_query_path %></li>
+          <li><%= link_to "Dashboard", new_dashboard_path %></li>
+          <li><%= link_to "Check", new_check_path %></li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <%= yield %>
     </div>
