Better dashboard style

--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -16,6 +16,8 @@
   </p>
 <% end %>
 
+<hr style="margin-top: 0;" />
+
 <%= render partial: "blazer/variables", locals: {action: dashboard_path(@dashboard)} %>
 
 <% @queries.each_with_index do |query, i| %>
