--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -28,6 +28,10 @@
   <p><%= @query.description %></p>
 <% end %>
 
+<% if @bind_vars.any? %>
+  <hr style="margin-top: 0;" />
+<% end %>
+
 <%= render partial: "blazer/variables", locals: {action: query_path(@query)} %>
 
 <pre id="code"><code><%= @statement %></code></pre>
