--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -21,7 +21,7 @@
       <div class="container">
         <ul class="nav navbar-nav">
           <li><%= link_to "Blazer", root_path, class: "navbar-brand" %></li>
-          <li><%= link_to "Queries", root_path %></li>
+          <li><%= link_to "Queries", root_path(type: "query") %></li>
           <li><%= link_to "Dashboards", dashboards_path %></li>
           <li><%= link_to "Checks", checks_path %></li>
         </ul>
