--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "Mine", send(filter_path, filter: "mine"), class: params[:filter] == "mine" ? "active" : nil %>
       <% end %>
     </div>
-    <input type="text" v-model="searchTerm" placeholder="Start typing a query or person" style="width: 300px; display: inline-block;" v-focus class="search form-control" />
+    <input type="text" v-model="searchTerm" placeholder="Start typing a <%= request.path == "/dashboards" ? "dashboard" : "query" %> or person" style="width: 300px; display: inline-block;" v-focus class="search form-control" />
   </div>
 
   <table class="table">
