--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -1,8 +1,8 @@
 <div id="queries">
   <div id="header" style="margin-bottom: 20px;">
     <div class="pull-right" style="line-height: 34px;">
-      <% if blazer_user && request.path != "/dashboards" %>
-        <% filter_path = request.path == "/" ? :root_path : :queries_path %>
+      <% if blazer_user && !request.path.end_with?("/dashboards") %>
+        <% filter_path = request.path.end_with?("/queries") ? :queries_path : :root_path %>
         <%= link_to "All", send(filter_path), class: !params[:filter] ? "active" : nil, style: "margin-right: 40px;" %>
 
         <% if Blazer.audit %>
@@ -12,7 +12,7 @@
         <%= link_to "Mine", send(filter_path, filter: "mine"), class: params[:filter] == "mine" ? "active" : nil %>
       <% end %>
     </div>
-    <input type="text" v-model="searchTerm" placeholder="Start typing a <%= request.path == "/dashboards" ? "dashboard" : "query" %> or person" style="width: 300px; display: inline-block;" v-focus class="search form-control" />
+    <input type="text" v-model="searchTerm" placeholder="Start typing a <%= request.path.end_with?("/dashboards") ? "dashboard" : "query" %> or person" style="width: 300px; display: inline-block;" v-focus class="search form-control" />
   </div>
 
   <table class="table">
