--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -21,13 +21,15 @@
       <div class="container">
         <ul class="nav navbar-nav">
           <li><%= link_to "Blazer", root_path, class: "navbar-brand" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Query", new_query_path %></li>
+              <li><%= link_to "Dashboard", new_dashboard_path %></li>
+              <li><%= link_to "Check", new_check_path(query_id: @query.try(:id)) %></li>
+            </ul>
+          </li>
           <li><%= link_to "Checks", checks_path %></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="navbar-text" style="font-weight: bold; padding-left: 15px;">Create</li>
-          <li><%= link_to "Query", new_query_path %></li>
-          <li><%= link_to "Dashboard", new_dashboard_path %></li>
-          <li><%= link_to "Check", new_check_path(query_id: @query.try(:id)) %></li>
         </ul>
       </div>
     </nav>
