--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -5,7 +5,7 @@
 <h2>Smart Variables</h2>
 
 <% if @smart_variables.any? %>
-  <p>Use these variable names to get a dropdown.</p>
+  <p>Use these variable names to get a dropdown of values.</p>
 
   <table class="table" style="max-width: 500px;">
     <thead>
