--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -1,9 +1,10 @@
 <% blazer_title "Checks" %>
 
-<p style="float: right;"><%= link_to "New Check", new_check_path, class: "btn btn-info" %></p>
-<%= render partial: "blazer/nav" %>
+<div id="header">
+  <input id="search" type="text" placeholder="Start typing a query or state" style="width: 300px; display: inline-block;" class="search form-control" />
+</div>
 
-<table class="table">
+<table id="checks" class="table">
   <thead>
     <tr>
       <th>Query</th>
@@ -41,3 +42,12 @@
     <% end %>
   </tbody>
 </table>
+
+<script>
+  $("#search").on("keyup", function() {
+    var value = $(this).val().toLowerCase()
+    $("#checks tbody tr").filter( function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    })
+  }).focus()
+</script>
