--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -13,10 +13,10 @@
           </div>
         </div>
         <div class="form-group text-right">
-          <div class="pull-left" style="margin-top: 9px;">
-            <%= link_to "Back", :back %>
+          <div class="pull-left" style="margin-top: 8px;">
+            <a :href="schemaPath" target="_blank" style="margin-right: 40px;">Schema</a>
+            <a :href="docsPath" target="_blank">Docs</a>
           </div>
-          <a :href="dataSourcePath" target="_blank" style="margin-right: 10px;">Docs</a>
           <%= f.select :data_source, Blazer.data_sources.values.select { |ds| q = @query.dup; q.data_source = ds.id; q.editable?(blazer_user) }.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size <= 1), style: "width: 140px;" %>
           <div id="tables" style="display: inline-block; width: 250px; margin-right: 10px;">
             <select id="table_names" style="width: 240px;" placeholder="Preview table"></select>
@@ -79,8 +79,11 @@
       editorHeight: "180px"
     },
     computed: {
-      dataSourcePath: function() {
+      schemaPath: function() {
         return Routes.schema_queries_path({data_source: this.dataSource})
+      },
+      docsPath: function() {
+        return Routes.docs_queries_path({data_source: this.dataSource})
       }
     },
     methods: {
