--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -1,6 +1,8 @@
-<% blazer_title @data_source.name %>
+<% blazer_title "Docs: #{@data_source.name}" %>
 
-<h1><%= @data_source.name %></h1>
+<h1 style="margin-top: 0;">Docs: <%= @data_source.name %></h1>
+
+<hr />
 
 <h2>Smart Variables</h2>
 
@@ -123,28 +125,3 @@
 </table>
 
 <p>Use the column name <code>target</code> to draw a line for goals.</p>
-
-<h2>Schema</h2>
-
-<% @schema.each do |table| %>
-  <table class="table" style="max-width: 500px;">
-    <thead>
-      <tr>
-        <th colspan="2">
-          <%= table[:table] %>
-          <% if table[:schema] != "public" %>
-            <span class="text-muted" style="font-weight: normal;"><%= table[:schema] %></span>
-          <% end %>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <% table[:columns].each do |column| %>
-        <tr>
-          <td style="width: 60%;"><%= column[:name] %></td>
-          <td class="text-muted"><%= column[:data_type] %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
