--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -1,6 +1,6 @@
 <div id="queries">
-  <div id="header" style="margin-bottom: 20px;">
-    <div class="pull-right">
+  <div id="header">
+    <div class="pull-right" style="line-height: 34px;">
       <% if blazer_user %>
         <%= link_to "All", root_path, class: !params[:filter] ? "active" : nil, style: "margin-right: 40px;" %>
 
@@ -8,24 +8,10 @@
           <%= link_to "Viewed", root_path(filter: "viewed"), class: params[:filter] == "viewed" ? "active" : nil, style: "margin-right: 40px;" %>
         <% end %>
 
-        <%= link_to "Mine", root_path(filter: "mine"), class: params[:filter] == "mine" ? "active" : nil, style: "margin-right: 40px;" %>
+        <%= link_to "Mine", root_path(filter: "mine"), class: params[:filter] == "mine" ? "active" : nil %>
       <% end %>
-      <div class="btn-group">
-        <%= link_to "New Query", new_query_path, class: "btn btn-info" %>
-        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="caret"></span>
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><%= link_to "Dashboards", dashboards_path %></li>
-          <li><%= link_to "Checks", checks_path %></li>
-          <li role="separator" class="divider"></li>
-          <li><%= link_to "New Dashboard", new_dashboard_path %></li>
-          <li><%= link_to "New Check", new_check_path %></li>
-        </ul>
-      </div>
     </div>
-    <input type="text" v-model="searchTerm" placeholder="Start typing a query or person" style="width: 300px; display: inline-block;" autofocus=true class="search form-control" />
+    <input type="text" v-model="searchTerm" placeholder="Start typing a query, dashboard, or person" style="width: 300px; display: inline-block;" v-focus class="search form-control" />
   </div>
 
   <table class="table">
@@ -145,6 +131,13 @@
           return Routes.dashboard_path(item.to_param)
         } else {
           return Routes.query_path(item.to_param)
+        }
+      }
+    },
+    directives: {
+      focus: {
+        inserted: function (el) {
+          el.focus()
         }
       }
     }
