--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -1,27 +1,18 @@
 <% blazer_title @query.name %>
 
-<div class="topbar">
-  <div class="container">
-    <div class="row" style="padding-top: 13px;">
-      <div class="col-sm-9">
-        <%= render partial: "blazer/nav" %>
-        <h3 style="margin: 0; line-height: 34px; display: inline;">
-          <%= @query.name %>
-        </h3>
-      </div>
-      <div class="col-sm-3 text-right">
-        <%= link_to "Edit", edit_query_path(@query, variable_params), class: "btn btn-default", disabled: !@query.editable?(blazer_user) %>
-        <%= link_to "Fork", new_query_path(variable_params.merge(fork_query_id: @query.id, data_source: @query.data_source, name: @query.name)), class: "btn btn-info" %>
+<div class="row">
+  <div class="col-sm-9">
+    <h3 style="line-height: 34px;"><%= @query.name %></h3>
+  </div>
+  <div class="col-sm-3 text-right">
+    <%= link_to "Edit", edit_query_path(@query, variable_params), class: "btn btn-default", disabled: !@query.editable?(blazer_user) %>
+    <%= link_to "Fork", new_query_path(variable_params.merge(fork_query_id: @query.id, data_source: @query.data_source, name: @query.name)), class: "btn btn-info" %>
 
-        <% if !@error && @success %>
-          <%= button_to "Download", run_queries_path(query_id: @query.id, format: "csv"), params: {statement: @statement}, class: "btn btn-primary" %>
-        <% end %>
-      </div>
-    </div>
+    <% if !@error && @success %>
+      <%= button_to "Download", run_queries_path(query_id: @query.id, format: "csv"), params: {statement: @statement}, class: "btn btn-primary" %>
+    <% end %>
   </div>
 </div>
-
-<div style="margin-bottom: 60px;"></div>
 
 <% if @sql_errors.any? %>
   <div class="alert alert-danger">
@@ -37,6 +28,10 @@
   <p><%= @query.description %></p>
 <% end %>
 
+<% if @bind_vars.any? %>
+  <hr style="margin-top: 0;" />
+<% end %>
+
 <%= render partial: "blazer/variables", locals: {action: query_path(@query)} %>
 
 <pre id="code"><code><%= @statement %></code></pre>
@@ -49,7 +44,7 @@
   <script>
     function showRun(data) {
       $("#results").html(data)
-      $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60})
+      $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 0})
     }
 
     function showError(message) {
