--- a/app/views/blazer/queries/schema.html.erb
+++ b/app/views/blazer/queries/schema.html.erb
@@ -1,6 +1,6 @@
 <% blazer_title "Schema: #{@data_source.name}" %>
 
-<h1 style="margin-top: 0;">Schema: <%= @data_source.name %></h1>
+<h1>Schema: <%= @data_source.name %></h1>
 
 <hr />
 
