Added pie charts - closes #181

--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -112,6 +112,10 @@
       <td>2 columns - both numeric</td>
     </tr>
     <tr>
+      <td>Pie</td>
+      <td>2 columns - string, numeric - and last column named <code>pie</code></td>
+    </tr>
+    <tr>
       <td>Map</td>
       <td>
         Named <code>latitude</code> and <code>longitude</code>, or <code>lat</code> and <code>lon</code>, or <code>lat</code> and <code>lng</code>
