--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -16,7 +16,7 @@
   </p>
 <% end %>
 
-<hr style="margin-top: 0;" />
+<hr class="double-margin" />
 
 <%= render partial: "blazer/variables", locals: {action: dashboard_path(@dashboard)} %>
 
