--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -12,7 +12,7 @@
             <div id="editor" :style="{ height: editorHeight }"><%= @query.statement %></div>
           </div>
         </div>
-        <div class="form-group text-right">
+        <div class="form-group text-right" style="margin-bottom: 8px;">
           <div class="pull-left" style="margin-top: 8px;">
             <a :href="schemaPath" target="_blank" style="margin-right: 40px;">Schema</a>
             <a :href="docsPath" target="_blank">Docs</a>
